Anadidos nuevos cuadros de ayuda en el modal

--- a/public/js/ayuda/ayuda-objeto-user.html
+++ b/public/js/ayuda/ayuda-objeto-user.html
@@ -2,8 +2,7 @@
 
 Pulsar <i class="fa fa-plus"></i>
 <strong> Nuevo</strong> para crear un objeto nuevo.<br><br>
-Pulsar <i class="fa fa-pencil-square-o"></i>
-<strong> Gestionar</strong> para editar el objeto seleccionado.
+Pulsar <i class="fa fa-pencil-square-o"></i>para editar el objeto seleccionado.
 <br><p class="text-warning" align="justify"><i class="fa fa-exclamation-triangle"></i>
     Para editar un objeto debes ser propietario de este o ser un usuario de nivel superior al del creador del objeto.</p><br>
 
