--- a/public/js/ayuda/ayuda-objeto.html
+++ b/public/js/ayuda/ayuda-objeto.html
@@ -2,7 +2,7 @@
 <p align="justify">
     Sección con la lista de todos los objetos del sistema.<br><br>
     Pulsar <i class="fa fa-eye"></i>
-    <strong> Ver</strong> para acceder a la descripción del objeto 	seleccionado.<br><br>
+    <strong> Ver</strong> para acceder a los datos del objeto seleccionado.<br><br>
     La lista de objetos puede filtrarse por diferentes parámetros como el año,
     material o lugar.
     Para ello, seleccionar aquellos parámetros de búsqueda que se deseen,
@@ -12,3 +12,20 @@
     Si se quieren ver de nuevo todos los objetos disponibles,
     pulsar <i class="fa fa-eye"></i>
     <strong> Ver todo</strong><br><br>
+
+    Los objetos pueden estar hecho de distintos materiales que vienen representados por colores:
+    <table>
+    <tr style="line-height: 50px;">
+        <td>
+    Madera: <hr style="color : #8B4513;background-color: #8B4513"> , Hierro: <hr style="color : #B0E0E6;background-color: #B0E0E6">
+           , Bronce: <hr style="color : #228B22;background-color: #228B22"> , Cer&aacute;mica : <hr style="color : #FF8C00;background-color: #FF8C00">
+            , Vidrio : <hr style="color : #00FFFF;background-color: #00FFFF">
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+        Hueso :  <hr style="color : #F5F5DC;background-color: #F5F5DC">
+        </td>
+    </tr>
+</table>
