Añadidos cuadros de ayuda al objeto

--- a/public/html/objetos/ayuda-objeto.html
+++ b/public/html/objetos/ayuda-objeto.html
@@ -28,4 +28,8 @@
         Hueso :  <hr style="color : #F5F5DC;background-color: #F5F5DC">
         </td>
     </tr>
+
 </table>
+
+<br><br>
+Si no hubiera ningún color significa que el objeto no está compuesto por ninguno de estos materiales
