--- a/public/html/objetos/partes-objeto.html
+++ b/public/html/objetos/partes-objeto.html
@@ -4,16 +4,16 @@
     Primero hay que crear las partes de las que se compone el objeto y posteriormente 								clasificarlas. En el caso de los objetos de una única pieza deberá crearse una parte, siendo esta parte la única de la que está compuesta el objeto.
 
     <br><br>
-    Pulsar <i class="fa fa-check"></i><strong> Añadir</strong> para
+    Pulsar <i class="fa fa-plus"></i><strong> Añadir</strong> para
     crear una parte.
 
     <br><br>
-    Pulsar <i class="fa fa-pencil-square-o"></i><strong> Gestionar</strong>para editar la categoría y subcategoría de una parte.
+    Pulsar <i class="fa fa-pencil-square-o"></i><strong> Gestionar</strong> para editar la categoría y subcategoría de una parte.
 
     <br><br>
     Para indicar que una parte no tiene categoría o subcategoría, seleccionar <i>sin categoría</i>.
     Se debe tener en cuenta que una parte puede pertenecer a una subcategoría sólo si previamente está clasificado en una categoría.
 
     <br><br>
-    Pulsar <i class="fa fa-check"></i><strong> Eliminar</strong> para
+    Pulsar <i class="fa fa-trash-o"></i><strong> Eliminar</strong> para
     borrar una parte.
