--- a/public/html/inhumaciones/lista-inhumaciones.html
+++ b/public/html/inhumaciones/lista-inhumaciones.html
@@ -21,3 +21,6 @@
     pulsar <i class="fa fa-eye"></i>
     <strong> Ver todo</strong>
     <br><br>
+<p class="text-warning"><i class="fa fa-exclamation-triangle"></i>
+ Para editar una inhumación debes ser propietario de esta o ser un usuario de nivel superior al del creador de la inhumación.</p>
+<br><br>
