Añadida ayuda hasta mensajes

--- a/public/html/inhumaciones/lista-inhumaciones.html
+++ b/public/html/inhumaciones/lista-inhumaciones.html
@@ -6,7 +6,7 @@
     <strong> Ver</strong> para acceder a los datos de la inhumación  seleccionada.
 
     <br><br>
-    La lista de inhumaciones puede filtrarse por diferentes parámetros  por diferentes parámetros como
+    La lista de inhumaciones puede filtrarse por diferentes parámetros como
     la UE de cadáver, fosa, estructura o relleno, o la tumba (una tumba puede tener cero o más inhumaciones asociadas).
     <br><br>
     Para ello, seleccionar aquellos parámetros de búsqueda que se deseen,
