Acabados los paneles de ayuda

--- a/public/html/mensajes/mensajes.html
+++ b/public/html/mensajes/mensajes.html
@@ -10,3 +10,6 @@ Selecciona una sala si deseas ver los mensajes  de dicha sala.
 </p>
 <p align="justify">La lista de mensajes pueden filtrarse por categoría, fecha y usuario. Una vez se han seleccionado los parámetros deseados,
     pulsar <i class="fa fa-search"></i><strong> Buscar mensajes</strong>.</p>
+
+<p align="justify">Para enviar un mensaje a otro usuario rellena el formulario del panel lateral izquierdo
+y pulsa <i class="fa fa-paper-plane"></i><strong> Enviar</strong>.</p>
