Hotfix pruebas objeto 11/11

--- a/public/html/objetos/medida-objeto.html
+++ b/public/html/objetos/medida-objeto.html
@@ -8,3 +8,7 @@
     <br><br>
     Para eliminar una medida asociada al objeto, seleccionar la medida en el panel inferior
     y pulsar <i class="fa fa-trash"></i><strong> Eliminar medida</strong>.<br>
+
+    <br><br>
+    Para asociar una medida es necesario que la parte tenga asociadas una <strong>Categoría</strong> y una <strong>subcategoría</strong>
+    </p>
