--- a/public/html/gestion/profile.html
+++ b/public/html/gestion/profile.html
@@ -5,7 +5,7 @@
     Para actualizar los datos personales pulsar <i class="fa fa-pencil-square-o"></i> <strong>Gestionar</strong>
 
     <br><br>
-    Si quiere borrar la cuenta, pulsar <i class="fa fa-trash"></i> <strong>Borrar</strong>
+    Para borrar la cuenta es necesario que no tenga ningún registro pendiente por validar. Si desea borrarla, pulsar <i class="fa fa-trash"></i> <strong>Borrar</strong>
     <br>
     Ten en cuenta que una vez hecho, la cuenta se borrará del sistema y no podrás acceder.
 </p>
